fixed fake-btn shift after changing parent padding

--- a/app/posts/static/posts/css/post_editor_style.css
+++ b/app/posts/static/posts/css/post_editor_style.css
@@ -98,7 +98,7 @@
   width: 100%;
   height: 100%;
   display: block;
-  translate: -5px -5px;
+  translate: -1ch -5px; /* Should be opposite of paren(list-item) padding */
   z-index: 2;
 }
 
